--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body {
   font-family: "Montserrat", sans-serif;
   background-attachment: fixed;
-  background-size: cover;
+  background-size: auto 100vmax;
 }
 
 .container {
